feat(k8s): self-healing deployment, crash-watcher with Messenger alerts, docs
- k8s/backend.yaml: Deployment (2 replicas, liveness/readiness/startup probes,
  heap-dump PVC, imagePullSecrets regcred) + Service
- k8s/crash-watcher.yaml: RBAC, incidents PVC, CronJob dumping crash evidence
  and alerting on Messenger; retry of failed sends via pending-alert.txt
- k8s/scripts/: watch.sh, notify-messenger.sh, find-thread.sh, editable
  alert-template.txt (ConfigMap, placeholders, PL + emoji)
- k8s/apply.sh: one-time install (regcred, cosmo-env from /cosmo/.env-prod,
  manifests, ConfigMap)
- ci.yml: deploy job now does kubectl set image + rollout + smoke tests via
  port-forward + rollout undo; refreshes regcred
- prod probes enabled + exempted in ApiKeyFilter (liveness/readiness)
- README/.env.example/AGENTS.md: k8s setup, env vars, Messenger thread id,
  end-to-end checklist, troubleshooting